# anyup

./: .gitignore  README.md  environment.yaml  hubconf.py  pyproject.toml  setup.py  train.py
anyup/: loss.py  model.py
anyup/layers/: __init__.py  feature_unification.py
anyup/layers/attention/: __init__.py  attention_masking.py  natten_attention.py
anyup/utils/: training.py
anyup/utils/dataloader/: post_collate.py
config/: base.yaml
